k8s/deployment.yml
apiVersion: application/v1
kind: Deployment
metadata:
  name: nodejs-demo-devops-deployment
  namespace: nodejs-demo-devops
  labels:
    app: nodejs-demo-devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-demo-devops
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: nodejs-demo-devops
    spec:
      containers:
        - name: nodejs-demo-app
          image: ${DOCKER_USERNAME}/nodejs-demo-devops:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

    affinity:
      podAntiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: app
                  operator: In
                  values:
                    - nodejs-demo-devops
            topologyKey: "kubernetes.io/hostname" # Ensure pods are scheduled on different nodes
